--- a/settings.config
+++ b/settings.config
@@ -1,11 +1,13 @@
 title:Chess Python
 font:Arial
 textSize:25
-maxFPS:30
-logFPS:false
+maxFPS:120
+logFPS:true
 width:400
 height:400
 menuWidth:150
 whiteStarts:true
 #xGrid:8
 #yGrid:8
+AI:False
+blackAndWhiteColor:False
